--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-   <link href="%PUBLIC_URL%/dist/output.css" rel="stylesheet">
+   <link href="../dist/output.css" rel="stylesheet">
     <title>Zoja Pay</title>
   </head>
   <body>
