--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
    <link href="../dist/output.css" rel="stylesheet">
-    <title>Zoja Pay</title>
+    <title>RoutePay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
